--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,13 @@ Carthage/Build
 
 fastlane/report.xml
 fastlane/screenshots
+
+### Java
+
+ParticleSystems/bin/
+
+### IDE Settings Sjors
+
+ParticleSystems/.classpath
+ParticleSystems/.project
+ParticleSystems/.settings/
